# ncht-manager

./: Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  dockerimage.yml
src/: channel.rs  chat.rs  config.rs  main.rs
src/chat/: request.rs  response.rs
