[package]
name = "ncht-manager"
version = "0.1.0"
authors = ["haryu703"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
chrono = { version = "0.4.31", default-features = false }
poise = "0.5.7"
serde = "1.0.195"
serde_json = "1.0.108"
shuttle-poise = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-secrets = "0.36.0"
tracing = "0.1.40"
