[package]
name = "ncht-manager"
version = "0.1.0"
authors = ["haryu703"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.34", default-features = false }
poise = "0.5.7"
serde = "1.0.197"
serde_json = "1.0.114"
shuttle-poise = "0.37.0"
shuttle-runtime = "0.39.0"
shuttle-secrets = "0.39.0"
tracing = "0.1.40"
