[package]
name = "ncht-manager"
version = "0.1.0"
authors = ["haryu703"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.37", default-features = false }
poise = "0.6.1"
serde = "1.0.197"
serde_json = "1.0.115"
shuttle-runtime = "0.43.0"
shuttle-secrets = "0.42.0"
shuttle-serenity = "0.43.0"
tracing = "0.1.40"
